miniextendr-macros/tests/ui/typed_list_unknown_type.rs
use miniextendr_macros::typed_list;

const _SPEC: () = {
    let _ = typed_list!(alpha => bogus());
};

fn main() {}
